--- a/src/dynarmic/CMakeLists.txt
+++ b/src/dynarmic/CMakeLists.txt
@@ -1,46 +1,84 @@
+function(target_headers TARGET_NAME SCOPE)
+    # Obtain the full path of the headers, as install() will fail otherwise
+    foreach(HEADER ${ARGN})
+        string(CONCAT FULL_HEADER "${CMAKE_CURRENT_SOURCE_DIR}/" "${HEADER}")
+        list(APPEND FULL_HEADERS "${FULL_HEADER}")
+    endforeach()
+    get_target_property(HEADERS "${TARGET_NAME}" "${SCOPE}_HEADER")
+    # The first time HEADERS will be empty
+    if (HEADERS STREQUAL HEADERS-NOTFOUND)
+        set(HEADERS ${FULL_HEADERS})
+    else()
+        list(APPEND HEADERS ${FULL_HEADERS})
+    endif()
+    set_target_properties("${TARGET_NAME}" PROPERTIES "${SCOPE}_HEADER" "${HEADERS}")
+endfunction()
+
 add_library(dynarmic
     common/assert.cpp
+    common/crypto/aes.cpp
+    common/crypto/crc32.cpp
+    common/crypto/sm4.cpp
+    common/fp/fused.cpp
+    common/fp/op/FPCompare.cpp
+    common/fp/op/FPConvert.cpp
+    common/fp/op/FPMulAdd.cpp
+    common/fp/op/FPRecipEstimate.cpp
+    common/fp/op/FPRecipExponent.cpp
+    common/fp/op/FPRecipStepFused.cpp
+    common/fp/op/FPRoundInt.cpp
+    common/fp/op/FPRSqrtEstimate.cpp
+    common/fp/op/FPRSqrtStepFused.cpp
+    common/fp/op/FPToFixed.cpp
+    common/fp/process_exception.cpp
+    common/fp/process_nan.cpp
+    common/llvm_disassemble.cpp
+    common/math_util.cpp
+    common/memory_pool.cpp
+    common/x64_disassemble.cpp
+    frontend/A32/types.cpp
+    frontend/A64/types.cpp
+    frontend/imm.cpp
+    ir/basic_block.cpp
+    ir/ir_emitter.cpp
+    ir/location_descriptor.cpp
+    ir/microinstruction.cpp
+    ir/opcodes.cpp
+    ir/opcodes.inc
+    ir/opt/constant_propagation_pass.cpp
+    ir/opt/dead_code_elimination_pass.cpp
+    ir/opt/identity_removal_pass.cpp
+    ir/opt/verification_pass.cpp
+    ir/type.cpp
+    ir/value.cpp
+)
+
+target_headers(dynarmic PRIVATE
     common/assert.h
     common/bit_util.h
     common/cast_util.h
     common/common_types.h
-    common/crypto/aes.cpp
     common/crypto/aes.h
-    common/crypto/crc32.cpp
     common/crypto/crc32.h
-    common/crypto/sm4.cpp
     common/crypto/sm4.h
     common/fp/fpcr.h
     common/fp/fpsr.h
-    common/fp/fused.cpp
     common/fp/fused.h
     common/fp/info.h
     common/fp/mantissa_util.h
     common/fp/op.h
-    common/fp/op/FPCompare.cpp
     common/fp/op/FPCompare.h
-    common/fp/op/FPConvert.cpp
     common/fp/op/FPConvert.h
-    common/fp/op/FPMulAdd.cpp
     common/fp/op/FPMulAdd.h
     common/fp/op/FPNeg.h
-    common/fp/op/FPRecipEstimate.cpp
     common/fp/op/FPRecipEstimate.h
-    common/fp/op/FPRecipExponent.cpp
     common/fp/op/FPRecipExponent.h
-    common/fp/op/FPRecipStepFused.cpp
     common/fp/op/FPRecipStepFused.h
-    common/fp/op/FPRoundInt.cpp
     common/fp/op/FPRoundInt.h
-    common/fp/op/FPRSqrtEstimate.cpp
     common/fp/op/FPRSqrtEstimate.h
-    common/fp/op/FPRSqrtStepFused.cpp
     common/fp/op/FPRSqrtStepFused.h
-    common/fp/op/FPToFixed.cpp
     common/fp/op/FPToFixed.h
-    common/fp/process_exception.cpp
     common/fp/process_exception.h
-    common/fp/process_nan.cpp
     common/fp/process_nan.h
     common/fp/rounding_mode.h
     common/fp/unpacked.cpp
@@ -48,13 +86,10 @@ add_library(dynarmic
     common/fp/util.h
     common/intrusive_list.h
     common/iterator_util.h
-    common/llvm_disassemble.cpp
     common/llvm_disassemble.h
     common/lut_from_list.h
     common/macro_util.h
-    common/math_util.cpp
     common/math_util.h
-    common/memory_pool.cpp
     common/memory_pool.h
     common/safe_ops.h
     common/scope_exit.h
@@ -62,67 +97,39 @@ add_library(dynarmic
     common/u128.cpp
     common/u128.h
     common/variant_util.h
-    common/x64_disassemble.cpp
     common/x64_disassemble.h
-    frontend/A32/types.cpp
     frontend/A32/types.h
-    frontend/A64/types.cpp
     frontend/A64/types.h
     frontend/decoder/decoder_detail.h
     frontend/decoder/matcher.h
-    frontend/imm.cpp
     frontend/imm.h
     interface/exclusive_monitor.h
     interface/optimization_flags.h
-    ir/basic_block.cpp
     ir/basic_block.h
     ir/cond.h
-    ir/ir_emitter.cpp
     ir/ir_emitter.h
-    ir/location_descriptor.cpp
     ir/location_descriptor.h
-    ir/microinstruction.cpp
     ir/microinstruction.h
-    ir/opcodes.cpp
     ir/opcodes.h
-    ir/opcodes.inc
-    ir/opt/constant_propagation_pass.cpp
-    ir/opt/dead_code_elimination_pass.cpp
-    ir/opt/identity_removal_pass.cpp
     ir/opt/ir_matcher.h
     ir/opt/passes.h
-    ir/opt/verification_pass.cpp
     ir/terminal.h
-    ir/type.cpp
     ir/type.h
-    ir/value.cpp
     ir/value.h
 )
 
 if ("A32" IN_LIST DYNARMIC_FRONTENDS)
     target_sources(dynarmic PRIVATE
-        frontend/A32/decoder/arm.h
         frontend/A32/decoder/arm.inc
-        frontend/A32/decoder/asimd.h
         frontend/A32/decoder/asimd.inc
-        frontend/A32/decoder/thumb16.h
         frontend/A32/decoder/thumb16.inc
-        frontend/A32/decoder/thumb32.h
         frontend/A32/decoder/thumb32.inc
-        frontend/A32/decoder/vfp.h
         frontend/A32/decoder/vfp.inc
-        frontend/A32/disassembler/disassembler.h
         frontend/A32/disassembler/disassembler_arm.cpp
         frontend/A32/disassembler/disassembler_thumb.cpp
-        frontend/A32/FPSCR.h
         frontend/A32/ir_emitter.cpp
-        frontend/A32/ir_emitter.h
-        frontend/A32/ITState.h
         frontend/A32/location_descriptor.cpp
-        frontend/A32/location_descriptor.h
-        frontend/A32/PSR.h
         frontend/A32/translate/conditional_state.cpp
-        frontend/A32/translate/conditional_state.h
         frontend/A32/translate/impl/asimd_load_store_structures.cpp
         frontend/A32/translate/impl/asimd_misc.cpp
         frontend/A32/translate/impl/asimd_one_reg_modified_immediate.cpp
@@ -167,31 +174,42 @@ if ("A32" IN_LIST DYNARMIC_FRONTENDS)
         frontend/A32/translate/impl/thumb32_parallel.cpp
         frontend/A32/translate/impl/thumb32_store_single_data_item.cpp
         frontend/A32/translate/impl/translate.cpp
-        frontend/A32/translate/impl/translate.h
         frontend/A32/translate/impl/vfp.cpp
         frontend/A32/translate/translate.cpp
-        frontend/A32/translate/translate.h
         frontend/A32/translate/translate_arm.cpp
         frontend/A32/translate/translate_thumb.cpp
+        ir/opt/a32_constant_memory_reads_pass.cpp
+        ir/opt/a32_get_set_elimination_pass.cpp
+    )
+    target_headers(dynarmic PRIVATE
+        frontend/A32/decoder/arm.h
+        frontend/A32/decoder/asimd.h
+        frontend/A32/decoder/thumb16.h
+        frontend/A32/decoder/thumb32.h
+        frontend/A32/decoder/vfp.h
+        frontend/A32/disassembler/disassembler.h
+        frontend/A32/FPSCR.h
+        frontend/A32/ir_emitter.h
+        frontend/A32/ITState.h
+        frontend/A32/location_descriptor.h
+        frontend/A32/PSR.h
+        frontend/A32/translate/conditional_state.h
+        frontend/A32/translate/impl/translate.h
+        frontend/A32/translate/translate.h
         interface/A32/a32.h
         interface/A32/arch_version.h
         interface/A32/config.h
         interface/A32/coprocessor.h
         interface/A32/coprocessor_util.h
         interface/A32/disassembler.h
-        ir/opt/a32_constant_memory_reads_pass.cpp
-        ir/opt/a32_get_set_elimination_pass.cpp
     )
 endif()
 
 if ("A64" IN_LIST DYNARMIC_FRONTENDS)
     target_sources(dynarmic PRIVATE
-        frontend/A64/decoder/a64.h
         frontend/A64/decoder/a64.inc
         frontend/A64/ir_emitter.cpp
-        frontend/A64/ir_emitter.h
         frontend/A64/location_descriptor.cpp
-        frontend/A64/location_descriptor.h
         frontend/A64/translate/impl/branch.cpp
         frontend/A64/translate/impl/data_processing_addsub.cpp
         frontend/A64/translate/impl/data_processing_bitfield.cpp
@@ -213,7 +231,6 @@ if ("A64" IN_LIST DYNARMIC_FRONTENDS)
         frontend/A64/translate/impl/floating_point_data_processing_three_register.cpp
         frontend/A64/translate/impl/floating_point_data_processing_two_register.cpp
         frontend/A64/translate/impl/impl.cpp
-        frontend/A64/translate/impl/impl.h
         frontend/A64/translate/impl/load_store_exclusive.cpp
         frontend/A64/translate/impl/load_store_load_literal.cpp
         frontend/A64/translate/impl/load_store_multiple_structures.cpp
@@ -252,31 +269,29 @@ if ("A64" IN_LIST DYNARMIC_FRONTENDS)
         frontend/A64/translate/impl/system_flag_format.cpp
         frontend/A64/translate/impl/system_flag_manipulation.cpp
         frontend/A64/translate/translate.cpp
-        frontend/A64/translate/translate.h
-        interface/A64/a64.h
-        interface/A64/config.h
         ir/opt/a64_callback_config_pass.cpp
         ir/opt/a64_get_set_elimination_pass.cpp
         ir/opt/a64_merge_interpret_blocks.cpp
+    )
+    target_headers(dynarmic PRIVATE
+        frontend/A64/decoder/a64.h
+        frontend/A64/ir_emitter.h
+        frontend/A64/location_descriptor.h
+        frontend/A64/translate/impl/impl.h
+        frontend/A64/translate/translate.h
+        interface/A64/a64.h
+        interface/A64/config.h
     )
 endif()
 
 if (ARCHITECTURE STREQUAL "x86_64")
     target_sources(dynarmic PRIVATE
         backend/x64/abi.cpp
-        backend/x64/abi.h
         backend/x64/block_of_code.cpp
-        backend/x64/block_of_code.h
         backend/x64/block_range_information.cpp
-        backend/x64/block_range_information.h
         backend/x64/callback.cpp
-        backend/x64/callback.h
         backend/x64/constant_pool.cpp
-        backend/x64/constant_pool.h
-        backend/x64/constants.h
-        backend/x64/devirtualize.h
         backend/x64/emit_x64.cpp
-        backend/x64/emit_x64.h
         backend/x64/emit_x64_aes.cpp
         backend/x64/emit_x64_crc32.cpp
         backend/x64/emit_x64_data_processing.cpp
@@ -287,16 +302,26 @@ if (ARCHITECTURE STREQUAL "x86_64")
         backend/x64/emit_x64_vector.cpp
         backend/x64/emit_x64_vector_floating_point.cpp
         backend/x64/emit_x64_vector_saturation.cpp
-        backend/x64/exception_handler.h
         backend/x64/exclusive_monitor.cpp
-        backend/x64/host_feature.h
         backend/x64/hostloc.cpp
+        backend/x64/perf_map.cpp
+        backend/x64/reg_alloc.cpp
+    )
+    target_headers(dynarmic PRIVATE
+        backend/x64/abi.h
+        backend/x64/block_of_code.h
+        backend/x64/block_range_information.h
+        backend/x64/callback.h
+        backend/x64/constant_pool.h
+        backend/x64/constants.h
+        backend/x64/devirtualize.h
+        backend/x64/emit_x64.h
+        backend/x64/exception_handler.h
+        backend/x64/host_feature.h
         backend/x64/hostloc.h
         backend/x64/jitstate_info.h
         backend/x64/oparg.h
-        backend/x64/perf_map.cpp
         backend/x64/perf_map.h
-        backend/x64/reg_alloc.cpp
         backend/x64/reg_alloc.h
         backend/x64/stack_layout.h
     )
@@ -304,9 +329,11 @@ if (ARCHITECTURE STREQUAL "x86_64")
     if ("A32" IN_LIST DYNARMIC_FRONTENDS)
         target_sources(dynarmic PRIVATE
             backend/x64/a32_emit_x64.cpp
-            backend/x64/a32_emit_x64.h
             backend/x64/a32_interface.cpp
             backend/x64/a32_jitstate.cpp
+        )
+        target_headers(dynarmic PRIVATE
+            backend/x64/a32_emit_x64.h
             backend/x64/a32_jitstate.h
         )
     endif()
@@ -314,9 +341,11 @@ if (ARCHITECTURE STREQUAL "x86_64")
     if ("A64" IN_LIST DYNARMIC_FRONTENDS)
         target_sources(dynarmic PRIVATE
             backend/x64/a64_emit_x64.cpp
-            backend/x64/a64_emit_x64.h
             backend/x64/a64_interface.cpp
             backend/x64/a64_jitstate.cpp
+        )
+        target_headers(dynarmic PRIVATE
+            backend/x64/a64_emit_x64.h
             backend/x64/a64_jitstate.h
         )
     endif()
@@ -345,6 +374,8 @@ if (ARCHITECTURE STREQUAL "x86_64")
             target_sources(dynarmic PRIVATE
                 backend/x64/exception_handler_macos.cpp
                 backend/x64/mig/mach_exc_server.c
+            )
+            target_headers(dynarmic PRIVATE
                 backend/x64/mig/mach_exc_server.h
             )
         endif()
